# mcp_cop30

./: README.md  app.py  pyproject.toml  requirements.txt
aws_infra_mcp/: __init__.py  server.py
src/main/resources/: .dockerignore  Dockerfile
