 [project]
 name = "aws-infra-mcp"
 version = "0.1.0"
 description = "Model Context Protocol server exposing AWS infrastructure operations"
 readme = "README.md"
 requires-python = ">=3.10"
 license = { text = "MIT" }
 authors = [
   { name = "MCP Developer" }
 ]
 classifiers = [
   "Programming Language :: Python :: 3",
   "Programming Language :: Python :: 3 :: Only",
   "License :: OSI Approved :: MIT License",
   "Operating System :: OS Independent",
 ]

 dependencies = [
   "boto3>=1.33",
   "fastmcp>=0.4",
   "pydantic>=2.6",
 ]

 [project.optional-dependencies]
 dev = [
   "ruff>=0.4",
 ]

 [project.scripts]
 aws-infra-mcp = "aws_infra_mcp.server:main"

 [build-system]
 requires = ["setuptools>=64", "wheel"]
 build-backend = "setuptools.build_meta"
